# stac-tile-map

./: .gitignore  .isort.cfg  BUILD  Dockerfile  Dockerfile.aws.lambda  README.md  map.html  pants.toml  pyproject.toml  requirements-pip.txt  requirements.txt
.github/workflows/: build_lambda.yml  ci-docker-lambda.yml  ci-docker.yml  ci-pants.yml  create_map.yml  tests.yml
data/: craters.geojson  national-parks.geojson
misc/: crater_scraper.py
src/: cli.py  create_map.py  settings.py
src/app/: main.py
src/python/: schemas.py  settings.py
src/python/api/: BUILD  magnum_handler.py  main.py  mangum_handler.py
src/python/stac_tiler_map/: __init__.py  cli.py  create_map.py
src/stac_tiler_map/: create_map.py
tests/: test_api.py  test_cli.py  test_stac_tiler_map.py
