[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "isort>=5.12.0",
    "pytest>=7.3.1",
    "requests-mock>=1.10.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.24.0",
    "hypothesis>=6.72.1",
]

[project]
name = "stac-tile-map"
version = "0.2"
description = ""
authors = [
    { name = "Brendan McAndrew", email = "19274445+bmcandr@users.noreply.github.com" },
]
dependencies = [
    "fastapi[all]>=0.95.1",
    "pystac-client>=0.6.1",
    "folium>=0.14.0",
    "shapely>=2.0.1",
    "click>=8.1.3",
    "pystac>=1.7.2",
    "pydantic>=1.10.7",
    "orjson>=3.8.10",
    "mangum>=0.17.0",
    "uvicorn>=0.21.1",
    "python-dateutil>=2.8.2",
    "geojson>=3.0.1",
]
requires-python = ">=3.9,<3.10"
license = { text = "MIT" }

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
known_first_party = ["stac_tiler_map"]

[tool.pytest.ini_options]
pythonpath = ["src/python"]
